src/test/resources/scripts/language/parser/valid/binary/arithmetic/divisionInt.sbsc
// Test division

a = 4 / 2;

return a == 2;