src/test/resources/scripts/language/parser/invalid/value/invalidFunction.sbsc
// invoke a nonexistent function

a(4);

return false;